[gd_scene load_steps=3 format=2]

[ext_resource path="res://Creature/StatusDisplay/StatusDisplay.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[node name="StatusDisplay" type="Node2D"]
script = ExtResource( 1 )

[node name="Path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="StatusPosition" type="PathFollow2D" parent="Path"]

[node name="StatusContainer" type="Node2D" parent="."]
